# hyperdecktransfer

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  LICENSE.txt  README.md  environment.yml  hyperdecktransfer.spec  setup.cfg  setup.py
src/hyperdecktransfer/: hyperdecktransfer.py  prefs.pkl
