# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = hyperdecktransfer
description = Add a short description here!
author = Tyler Parker
author_email = tyler.parker@agilespaceindustries.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata; python_version<"3.9"

[options.packages.find]
where = src

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = hyperdecktransfer.module:function

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1
